// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > snapshot: className prop 1`] = `
<svg
  class="ucl-icon css-148hpxb a-class-name"
  data-testid="ucl-icon"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="3"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="20 6 9 17 4 12"
  />
</svg>
`;

exports[`Icon > snapshot: no props 1`] = `
<svg
  class="ucl-icon css-148hpxb"
  data-testid="ucl-icon"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="3"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="20 6 9 17 4 12"
  />
</svg>
`;

exports[`Icon > snapshot: size prop 1`] = `
<svg
  class="ucl-icon css-148hpxb"
  data-testid="ucl-icon"
  fill="none"
  height="32"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="3"
  viewBox="0 0 24 24"
  width="32"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="20 6 9 17 4 12"
  />
</svg>
`;
